# training-journal

./: .gitignore  Readme.md  build.sh
TrainingJournalApp/: gradle.properties  settings.gradle.kts
TrainingJournalApp/.fleet/: receipt.json
TrainingJournalApp/composeApp/: build.gradle.kts
TrainingJournalApp/composeApp/src/desktopMain/kotlin/: Main.kt
TrainingJournalApp/gradle/: libs.versions.toml
TrainingJournalApp/iosApp/Configuration/: Config.xcconfig
api/: Cargo.toml  Dockerfile
api/crates/api/: Cargo.toml
api/crates/api/src/: lib.rs
api/crates/grpc/: Cargo.toml  build.rs
api/crates/grpc/src/: auth.rs  lib.rs
api/crates/grpc_contracts/: Cargo.toml
api/crates/grpc_contracts/src/: lib.rs
api/crates/shared/: Cargo.toml
api/crates/shared/src/: lib.rs
api/crates/shared/src/configuration/: settings.rs
api/src/: main.rs
app/blocs/: pubspec.yaml
app/blocs/lib/: blocs.dart
app/blocs/lib/src/challenges/: challenges.dart
app/blocs/lib/src/storage/: storage.dart
app/blocs/test/: blocs_test.dart
app/repositories/: pubspec.yaml
app/repositories/lib/: repositories.dart
app/repositories/lib/src/auth/: auth.dart  auth_repository.dart
app/repositories/lib/src/grpc/: client.dart
app/repositories/test/: repositories_test.dart
app/training_journal/: pubspec.yaml
app/training_journal/android/app/: build.gradle
app/training_journal/ios/Runner/: Info.plist
app/training_journal/ios/Runner.xcodeproj/: project.pbxproj
app/training_journal/lib/: app.dart  home.dart  login.dart  main.dart
app/training_journal/lib/src/: src.dart  views.dart
app/training_journal/lib/src/app/: app.dart
app/training_journal/lib/src/challenges/: challenges_page.dart  views.dart
app/training_journal/lib/src/home/: home.dart  home_page.dart
app/training_journal/lib/src/login/: login.dart  login_page.dart
app/training_journal/lib/src/router/: router.dart  (+1 more)
app/training_journal/test/: widget_test.dart
app/training_journal/web/: index.html  manifest.json
training-api/: Cargo.toml
training-api/src/: config.rs  main.rs
training-app/: build.gradle.kts  gradle.properties  kls_database.db  settings.gradle.kts
training-app/.fleet/: receipt.json
training-app/composeApp/: build.gradle.kts
training-app/gradle/: libs.versions.toml
training-app/iosApp/iosApp/: iOSApp.swift
(+30 files in other folders)
