[package]
authors = ["Dispersia <dispersias@gmail.com>"]
edition = "2018"
name = "training_journal"
version = "0.1.0"

[dependencies]
tokio = { version = "1.1", features = [ "macros", "rt-multi-thread", "time", "net" ] }
pretty_env_logger = "0.4"

api = {path = "crates/api"}
shared = {path = "crates/shared"}

[profile.release]
lto = 'thin'
codegen-units = 1