[package]
authors = ["Dispersia <dispersias@gmail.com>"]
edition = "2018"
name = "training_journal"
version = "0.1.0"

[dependencies]
pretty_env_logger = "0.4"
tokio = {version = "1.1", features = ["macros", "rt-multi-thread", "time", "net"]}

api = {path = "crates/api"}
shared = {path = "crates/shared"}

[profile.dev]
debug = false

[profile.release]
codegen-units = 1
lto = 'thin'
