[package]
name = "training-api"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = 'thin'
codegen-units = 1
strip = 'symbols'

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0"
async-graphql = "7.0"
async-graphql-axum = "7.0"
axum = "0.7"
base64 = "0.12"
biscuit = "0.6"
config = "0.13"
mimalloc = { version = "0.1", default-features = false }
reqwest = { version = "0.11", default-features = false, features = [ "json", "rustls-tls" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json" ] }
thiserror = "1.0"
time = { version = "0.3", features = [ "serde", "serde-well-known" ] }
tokio = { version = "1.36", features = ["rt-multi-thread"] }
tower = { version = "0.4", features = [ "util" ] }
tower-http = { version = "0.4", features = [ "trace", "cors" ] }
tracing = "0.1"
tracing-subscriber = "0.3"
