[package]
authors = ["Dispersia <dispersias@gmail.com>"]
edition = "2018"
name = "grpc"
version = "0.1.0"

[dependencies]
biscuit = "0.5"
once_cell = "1.5"
prost = "0.7"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tonic = {git = "https://github.com/hyperium/tonic"}

[build-dependencies]
tonic-build = {git = "https://github.com/hyperium/tonic"}
